--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
-loader_version=0.16.4
+loader_version=0.17.2
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
 mod_version=1.9.4
@@ -14,5 +15,6 @@ maven_group=com.bwt
 archives_base_name=better_with_time
 
 # Dependencies
-emi_version=1.1.12+1.21
-fabric_version=0.114.0+1.21.1
+emi_version=1.1.22+1.21.1
+every_compat_version=1.21-2.11.6-fabric
+fabric_version=0.116.6+1.21.1
